--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,11 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  audioplayers: ^5.2.0
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +62,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/numbers/  
+    - assets/images/numbers/
+    - assets/images/family_members/
+    - assets/images/colors/
+    - assets/sounds/numbers/
+    - assets/sounds/colors/
+    - assets/sounds/family_members/  
 
 
   
